<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    tools:context=".fragments.SettingsFragment">

    <android.support.v7.preference.PreferenceCategory

        android:title="@string/settings">

        <android.support.v7.preference.CheckBoxPreference
            android:title="@string/allert_setting" />


        <Preference
            android:key="resetLogin"
            android:title="@string/exit_setting">

        </Preference>
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>